objects/Service_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>settings for service cloud</description>
    <fields>
        <fullName>Account_Address_Picklist_Size__c</fullName>
        <defaultValue>20</defaultValue>
        <description>how many rows of addresses are shown when creating booking</description>
        <label>Account Address Picklist Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_in_Booking__c</fullName>
        <label>Account in Booking</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_in_Quote__c</fullName>
        <label>Account in Quote</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Record_Type__c</fullName>
        <defaultValue>&apos;012110000000T5q&apos;</defaultValue>
        <label>Action Record Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_in_Booking__c</fullName>
        <label>Contact in Booking</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_in_Quote__c</fullName>
        <label>Contact in Quote</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>See_On_Stop_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <description>see button to request on stop approval from quote/booking page</description>
        <label>See On Stop Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Record_Type__c</fullName>
        <defaultValue>&apos;012110000000T5l&apos;</defaultValue>
        <label>Task Record Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Service Settings</label>
</CustomObject>